gobmkida/g3/influence_get_moyo_segmentation
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/influence_get_moyo_segmentation/src/engine/influence.c:1877:6: error: use of undeclared identifier 'byte_A2CADF'
if ( byte_A2CADF[i] != 3 ) 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/influence_get_moyo_segmentation/src/engine/influence.c:1896:44: error: use of undeclared identifier 'xmmword_4B0890'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_4B0890); 
                                           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/influence_get_moyo_segmentation/src/engine/influence.c:1900:18: error: expected expression
v15 = *( _OWORD *)&q->black_attenuation[v11 + 68 + v12]; 
                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/influence_get_moyo_segmentation/src/engine/influence.c:1900:10: error: use of undeclared identifier '_OWORD'
v15 = *( _OWORD *)&q->black_attenuation[v11 + 68 + v12]; 
         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/influence_get_moyo_segmentation/src/engine/influence.c:1903:12: error: expected expression
*( _OWORD *)&moyos->territorial_value[v12 + 1] = v15; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/influence_get_moyo_segmentation/src/engine/influence.c:1903:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&moyos->territorial_value[v12 + 1] = v15; 
   ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/influence_get_moyo_segmentation/src/obj/1/influence.o] Error 1
